<resources>
    <!-- Primary -->
    <string name="app_name" translatable="false">Tinkoff Fintech School</string>
    <string name="tinkoff_fintech_2lines" translatable="false">Tinkoff \nFintech</string>

    <!-- Placeholders -->
    <string name="placeholder_1x" translatable="false">Lorem</string>
    <string name="placeholder_2x" translatable="false">Lorem Ipsilum</string>
    <string name="placeholder_3x" translatable="false">Lorem Ipsilum Dolor</string>
    <string name="placeholder_5x" translatable="false">Lorem Ipsilum Dolor Si Amlet</string>
    <string name="placeholder_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="placeholder_digit_x1" translatable="false">2</string>
    <string name="placeholder_digit_empty" translatable="false">0</string>
    <string name="placeholder_ratio" translatable="false">2/20</string>

    <!-- Bottom navbar -->
    <string name="nav_event">Events</string>
    <string name="nav_courses">Courses</string>
    <string name="nav_profile">Profile</string>

    <!-- Login screen -->
    <string name="login_create_account">Make New Account</string>
    <string name="login_login_btn">Login</string>
    <string name="login_password">Password</string>
    <string name="login_email" translatable="false">Email</string>
    <string name="login_error_wrong_credentials">Wrong Credentials</string>
    <string name="login_error_wrong_unknown">Unknown Error</string>
    <string name="login_error_title">Login Failed</string>

    <!-- Events screen -->
    <string name="events_header_on_going">On Going</string>
    <string name="events_header_more">More</string>
    <string name="event_type_unknown">Event</string>
    <string name="events_header_archive">Archive</string>
    <string name="event_detail_description">Description</string>
    <string name="event_detail_location">Location</string>

    <!-- Profile screen -->
    <string name="quote_left" translatable="false">❝</string>
    <string name="quote_right" translatable="false">❞</string>
    <string name="profile_edit">Edit</string>
    <string name="profile_sign_out">Sign out</string>

    <!-- Profile attribute -->
    <string name="profile_attribute_mobile_phone">Mobile Phone</string>
    <string name="profile_attribute_email" translatable="false">Email</string>
    <string name="profile_attribute_home_city">Home City</string>
    <string name="profile_attribute_school">School</string>
    <string name="profile_attribute_school_grad">School Graduation</string>
    <string name="profile_attribute_university">University</string>
    <string name="profile_attribute_university_grad">University Graduation</string>
    <string name="profile_attribute_facility">Facility</string>
    <string name="profile_attribute_department">Department</string>
    <string name="profile_attribute_wrokplace">Work Place</string>
    <string name="profile_attributes_card_contact">Contact Info</string>
    <string name="profile_attributes_card_school">School Info</string>
    <string name="profile_attributes_card_work">Work Info</string>
    <string name="profile_apply_changes">Apply changes</string>
    <string name="profile_edit_not_impl_msg" translatable="false">You came to the wrong pace…</string>

    <!-- Search bar -->
    <string name="options_search">Search</string>

    <!-- Stats strip -->
    <string name="stats_score">Score</string>
    <string name="stats_tests">Tests</string>
    <string name="stats_courses">Curse</string>
    <string name="stats_homeworks">Home works</string>

    <!-- Course screen -->
    <string name="course_more_details">Details</string>
    <string name="course_status_ongoing">Ongoing</string>
    <string name="courses_my_courses">My Courses</string>
    <string name="course_detail_empty_msg">Nothing here yet, either you don\'t have any homeworks yet,  or you should reload the page</string>
    <string name="course_score">Score</string>
    <string name="course_rating">Global rating 🌟</string>
    <string name="course_tests_completed">Tests completed</string>
    <string name="course_homeworks_completed">Homeworks completed</string>
    <string name="course_name">Course Rate</string>

    <!-- Grades screen -->
    <string name="grades_sorted_by">Sorted by:</string>
    <string name="homework_status_new">New</string>
    <string name="homework_status_accepted">Accepted</string>
    <string name="homework_status_test_result">Test Result</string>
    <string name="homework_status_test_failed">Failed</string>
    <string name="homework_status_unknown">Unknown</string>
    <string name="grades_title_single">Single</string>
    <string name="grades_title_many">Many</string>

    <!-- Grades screen, sorting -->
    <string name="sort_descending">Descending</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_by_name">By Name</string>

    <!-- Generic error -->
    <string name="error_title">Error</string>
    <string name="error_data_not_updated">Some error occurred during data updating</string>
    <string name="error_not_implemented" translatable="false">Not implemented yet</string>
</resources>
