<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    android:layout_marginTop="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_small">

        <TextView
            android:id="@+id/grades_sum_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_digit_x1"
            android:textSize="@dimen/text_size_big"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/grades_sum_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/placeholder_2x"
            android:textSize="@dimen/text_size_big" />

        <TextView
            android:id="@+id/grades_sum_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/placeholder_1x"
            android:textSize="@dimen/text_size_big" />

    </LinearLayout>
</androidx.cardview.widget.CardView>

