<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardUseCompatPadding="true"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/courses_entry_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/course_name"
            style="@style/Tinkoff.Text.Card.Header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/courses_entry_score_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/course_card_spinner_size"
            android:layout_height="@dimen/course_card_spinner_size"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_small"
            android:indeterminate="false"
            android:max="100"
            android:progress="65"
            android:progressDrawable="@drawable/circle_progress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courses_entry_title" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/courses_entry_score_progress"
            app:layout_constraintEnd_toEndOf="@+id/courses_entry_score_progress"
            app:layout_constraintStart_toStartOf="@+id/courses_entry_score_progress"
            app:layout_constraintTop_toTopOf="@+id/courses_entry_score_progress">

            <TextView
                android:id="@+id/courses_entry_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_digit_x1"
                style="@style/Tinkoff.Text.Card.Header2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_score" />
        </LinearLayout>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_big"
            android:text="@string/course_rating"
            app:layout_constraintBaseline_toBaselineOf="@+id/courses_entry_global_rate"
            app:layout_constraintStart_toEndOf="@+id/courses_entry_score_progress" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/course_tests_completed"
            app:layout_constraintEnd_toStartOf="@+id/courses_entry_tests_passed"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:text="@string/course_homeworks_completed"
            app:layout_constraintBaseline_toBaselineOf="@+id/courses_entry_homework_completed"
            app:layout_constraintEnd_toStartOf="@+id/courses_entry_homework_completed"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView10" />




        <TextView
            android:id="@+id/courses_entry_global_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/course_details_ratio_margin"
            android:text="@string/placeholder_ratio"
            style="@style/Tinkoff.Text.Card.Header2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/courses_entry_score_progress" />

        <TextView
            android:id="@+id/courses_entry_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:text="@string/course_more_details"
            style="@style/Tinkoff.Text.Card.Link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/courses_entry_tests_passed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/course_details_ratio_margin"
            android:text="@string/placeholder_ratio"
            style="@style/Tinkoff.Text.Card.Header2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courses_entry_global_rate" />



        <TextView
            android:id="@+id/courses_entry_homework_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/course_details_ratio_margin"
            android:text="@string/placeholder_ratio"
            style="@style/Tinkoff.Text.Card.Header2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courses_entry_tests_passed" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>