<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/card_stats_left_slot"
            style="@style/Tinkoff.Text.Card.Header0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_digit_empty" />

        <TextView
            android:id="@+id/card_stats_left_slot_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_score" />

    </LinearLayout>

    <View
        android:id="@+id/sep1"
        android:layout_width="@dimen/divider_width"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_small"
        android:background="@color/card_sep_color" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/card_stats_center_slot"
            style="@style/Tinkoff.Text.Card.Header0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_digit_empty" />


        <TextView
            android:id="@+id/card_stats_center_slot_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_tests" />

    </LinearLayout>

    <View
        android:id="@+id/sep2"
        android:layout_width="@dimen/divider_width"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_small"

        android:background="@color/card_sep_color" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/card_stats_right_slot"
            style="@style/Tinkoff.Text.Card.Header0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_digit_empty" />

        <TextView
            android:id="@+id/card_stats_right_slot_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_courses"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/card_stats_right_slot"
            app:layout_constraintStart_toStartOf="@+id/card_stats_right_slot"
            app:layout_constraintTop_toBottomOf="@+id/card_stats_right_slot" />

    </LinearLayout>

</LinearLayout>