<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.skosc.tkffintech.ui.view.ScoreView
        android:id="@+id/task_icon"
        android:layout_width="@dimen/score_size"
        android:layout_height="@dimen/score_size"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="@+id/task_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/task_title" />

    <TextView
        android:id="@+id/task_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/course_task_title_margin"
        android:ellipsize="end"
        android:maxLines="2"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/placeholder_2x"
        style="@style/Tinkoff.Text.Card.Header2"
        app:layout_constraintEnd_toStartOf="@+id/task_status"
        app:layout_constraintStart_toEndOf="@+id/task_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/course_task_title_margin"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/placeholder_5x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/task_icon"
        app:layout_constraintTop_toBottomOf="@+id/task_title" />

    <TextView
        android:id="@+id/task_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        style="@style/Tinkoff.Text.Chip.Simple"
        android:text="@string/placeholder_1x"
        app:layout_constraintBaseline_toBaselineOf="@+id/task_title"
        app:layout_constraintEnd_toEndOf="parent" />
    
</androidx.constraintlayout.widget.ConstraintLayout>