<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="Theme.AppCompat.Light.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_activity_background"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/login_logo_width"
        android:layout_height="@dimen/login_logo_height"
        android:layout_marginTop="@dimen/login_logo_margin_vertical"
        android:layout_marginBottom="@dimen/login_logo_margin_vertical"
        android:src="@drawable/bitmap_3_x"
        app:layout_constraintBottom_toTopOf="@+id/email_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        style="@style/Tinkoff.TextEdit.Login"
        android:id="@+id/email_et"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/login_edit_bottom_margin"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        style="@style/Tinkoff.TextEdit.Login"
        android:id="@+id/password_et"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/login_edit_bottom_margin"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_btn_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/login_btn_frame"
        android:layout_width="@dimen/login_edit_width"
        android:layout_height="@dimen/login_edit_height"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/login_edit_bottom_margin"
        app:layout_constraintBottom_toTopOf="@+id/login_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bcg_button_yellow"
            android:text="@string/login_login_btn"
            android:textCursorDrawable="@drawable/nothing"
            android:textSize="@dimen/text_size_medium" />

        <ProgressBar
            android:id="@+id/login_loading_status"
            android:layout_width="@dimen/margin_large"
            android:layout_height="@dimen/margin_large"
            android:layout_gravity="center"
            android:elevation="@dimen/elevation_small"
            android:indeterminateTint="@color/absolute_black"
            android:indeterminateTintMode="src_in" />
    </FrameLayout>

    <TextView
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/login_logo_margin_vertical"
        android:gravity="center_horizontal"
        android:text="@string/login_create_account"
        android:textColor="@color/absolute_white"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>