<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    android:background="?android:attr/selectableItemBackground"
    android:elevation="@dimen/elevation_big"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/event_card_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/event_card_large_img_height"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_fancy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/event_card_type_title"
            style="@style/Tinkoff.Text.Chip.Simple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/placeholder_2x"
            app:layout_constraintBottom_toBottomOf="@+id/event_card_image"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/event_card_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/placeholder_2x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_card_image" />

        <TextView
            android:id="@+id/event_card_title"
            style="@style/Tinkoff.Text.Card.Header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@string/placeholder_5x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_card_date" />

        <TextView
            android:id="@+id/event_card_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/placeholder_long"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/event_card_title"
            app:layout_constraintTop_toBottomOf="@+id/event_card_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>